--- a/style.css
+++ b/style.css
@@ -80,6 +80,7 @@ main {
   border-radius: 10px;
   outline: none;
   box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.048);
+  background-color: rgba(143, 143, 143, 0.288);
 }
 
 .keyboard {
@@ -125,4 +126,13 @@ main {
   font-size: 28px;
   color: rgb(31, 31, 31);
   cursor: pointer;
+}
+.correct{  
+  height: 32px;
+}
+.contain{
+  background-color: rgb(255, 255, 121);
+}
+.animate__bounceIn{
+  background-color: rgb(130, 255, 130);
 }
