--- a/style.css
+++ b/style.css
@@ -87,6 +87,107 @@ main {
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 380px;
+  flex-wrap: wrap;
+}
+.container_letter {
+  margin: 5px;
+}
+
+.letter {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 25px;
+  height: 25px;
+  border: 0;
+  border-radius: 5px;
+  background-color: rgb(74, 110, 145);
+  cursor: pointer;
+  font-size: 18px;
+  color: rgb(31, 31, 31);
+  margin: 5px;
+}
+
+.delete {
+  height: 30px;
+  width: 40px;
+  background-color: rgb(224, 115, 115);
+  border: 0;
+  border-radius: 5px;
+  font-size: 18px;
+  color: rgb(31, 31, 31);
+  cursor: pointer;
+}
+
+.enter {
+  height: 30px;
+  width: 60px;
+  background-color: rgb(115, 247, 144);
+  border: 0;
+  border-radius: 5px;
+  font-size: 18px;
+  color: rgb(31, 31, 31);
+  
+  cursor: pointer;
+}
+.correct{  
+  height: 32px;
+}
+
+@media only screen and (min-width: 740px){
+  
+.btn_help {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 28px;
+  height: 28px;
+  border: 0px;
+  background-color: rgba(0, 0, 0, 0);
+  margin: 0px 25px 0px 25px;
+}
+
+.help {
+  width: 25px;
+  height: 25px;
+}
+
+.title {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  font-size: 48px;  
+  color: rgb(41, 40, 40);
+  text-shadow: 2px 2px 2px rgba(0, 0, 0, 0);
+}
+
+/* ---------CSS inputs and keyboard---------- */
+
+.container_input {
+  display: flex;
+  margin-bottom: 16px;
+}
+
+.input {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 60px;
+  height: 60px;
+  font-size: 38px;
+  margin: 0px 5px 0px 5px;
+  border: 4px solid rgb(55, 99, 139);
+  border-radius: 10px;
+  outline: none;
+  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.048);
+  background-color: rgba(143, 143, 143, 0.288);
+}
+
+.keyboard {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 700px;
   flex-wrap: wrap;
 }
@@ -131,4 +232,4 @@ main {
 .correct{  
   height: 32px;
 }
-
+}
