--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ main {
   display: flex;
   justify-content: center;
   width: 100%;
-  font-size: 48px;  
+  font-size: 48px;
   color: rgb(255, 255, 255);
   text-shadow: 2px 2px 2px rgba(0, 0, 0, 0);
 }
@@ -73,7 +73,7 @@ main {
   border: 2px solid rgb(255, 255, 255);
   border-radius: 10px;
   outline: none;
-  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.048);  
+  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.048);
   color: white;
 }
 
@@ -122,146 +122,152 @@ main {
   border-radius: 5px;
   font-size: 20px;
   color: rgb(3, 102, 0);
-  
+
   cursor: pointer;
 }
-.correct{  
+.correct {
   height: 32px;
 }
-#A{
+#A {
   margin-left: 10px;
 }
-#Q{
+#Q {
   margin-left: 15px;
 }
-#right{
+#right {
   color: rgb(0, 192, 16);
 }
-#wrong{
-  color: rgb(206, 0, 0)
+#wrong {
+  color: rgb(206, 0, 0);
 }
-#exist{
-  color: white
-}
-
-@media only screen and (min-width: 740px){
-  
-.btn_help {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 28px;
-  height: 28px;
-  border: 0px;
-  background-color: rgba(0, 0, 0, 0);
-  margin: 0px 25px 0px 25px;
-}
-
-.help {
-  width: 25px;
-  height: 25px;
-}
-
-.title {
-  display: flex;
-  justify-content: center;
-  width: 100%;
-  font-size: 48px;  
-  color: rgb(255, 255, 255);
-  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.13);
-}
-
-/* ---------CSS inputs and keyboard---------- */
-
-.container_input {
-  display: flex;
-  margin-bottom: 16px;
-}
-
-.input {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 60px;
-  height: 60px;
-  font-size: 38px;
-  margin: 0px 5px 0px 5px;
-  border: 2px solid rgb(255, 255, 255);
-  border-radius: 10px;
-  outline: none;
-  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.048);  
-  color: rgb(255, 253, 254);
-}
-
-.keyboard {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 620px;
-  flex-wrap: wrap;
-}
-.container_letter {
-  margin: 5px;
-}
-
-.letter {
-  width: 50px;
-  height: 50px;
-  border: 0;
-  border-radius: 5px;
-  background-color: rgb(255, 255, 255);
-  cursor: pointer;
-  font-size: 28px;
-  color: rgb(0, 21, 53);
-  margin: 5px;
-  border: 2px solid rgb(255, 255, 255)
-}
-
-.delete {
-  height: 50px;
-  width: 70px;
-  background-color: rgb(255, 255, 255);
-  border: 0;
-  border-radius: 5px;
-  font-size: 28px;
-  color: rgb(0, 35, 192);
-  cursor: pointer;
-}
-
-.enter {
-  height: 50px;
-  width: 100px;
-  background-color: rgb(255, 255, 255);
-  border: 0;
-  border-radius: 5px;
-  font-size: 28px;
-  color: rgb(0, 35, 192);
-  
-  cursor: pointer;
-}
-.correct{  
-  height: 32px;
-}
-#right{
+#exist {
   color: white;
 }
-#wrong{
-  color: white
-}
 
-#A{
-  margin-left: 0px;
-}
-#Q{
-  margin-left: 0px;
-}
-#right{
-  color: rgb(0, 192, 16);
-}
-#wrong{
-  color: rgb(206, 0, 0)
-}
-#exist{
-  color: white
-}
+@media only screen and (min-width: 740px) {
+  .btn_help {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 28px;
+    height: 28px;
+    border: 0px;
+    background-color: rgba(0, 0, 0, 0);
+    margin: 0px 25px 0px 25px;
+  }
+
+  .help {
+    width: 25px;
+    height: 25px;
+  }
+
+  .title {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    font-size: 48px;
+    color: rgb(255, 255, 255);
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.13);
+  }
+
+  /* ---------CSS inputs and keyboard---------- */
+
+  .container_input {
+    display: flex;
+    margin-bottom: 16px;
+  }
+
+  .input {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 60px;
+    height: 60px;
+    font-size: 38px;
+    margin: 0px 5px 0px 5px;
+    border: 2px solid rgb(255, 255, 255);
+    border-radius: 10px;
+    outline: none;
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.048);
+    color: rgb(255, 253, 254);
+  }
+
+  .keyboard {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 620px;
+    flex-wrap: wrap;
+  }
+  .container_letter {
+    margin: 5px;
+  }
+
+  .letter {
+    width: 50px;
+    height: 50px;
+    border: 0;
+    border-radius: 5px;
+    background-color: rgb(255, 255, 255);
+    cursor: pointer;
+    font-size: 28px;
+    color: rgb(0, 21, 53);
+    margin: 5px;
+    border: 2px solid rgb(255, 255, 255);
+  }
+
+  .delete {
+    height: 50px;
+    width: 70px;
+    background-color: rgb(255, 255, 255);
+    border: 0;
+    border-radius: 5px;
+    font-size: 28px;
+    color: rgb(0, 35, 192);
+    cursor: pointer;
+  }
+
+  .enter {
+    height: 50px;
+    width: 100px;
+    background-color: rgb(255, 255, 255);
+    border: 0;
+    border-radius: 5px;
+    font-size: 28px;
+    color: rgb(0, 35, 192);
+
+    cursor: pointer;
+  }
+  .correct {
+    height: 32px;
+  }
+  #right {
+    color: white;
+  }
+  #wrong {
+    color: white;
+  }
+
+  #A {
+    margin-left: 0px;
+  }
+  #Q {
+    margin-left: 0px;
+  }
+  #right {
+    color: rgb(0, 192, 16);
+  }
+  #wrong {
+    color: rgb(206, 0, 0);
+  }
+  #exist {
+    color: white;
+  }
+  .key_yellow {
+    background-color: #C6B100;
+  }
+
+  .key_green {
+    background-color: #1A7600;
+  }
 }
